# py-portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: currencies.json
data/exchange_rates/CAD/: 2020-01-01.json  2020-01-02.json  2020-01-03.json  2020-01-04.json  2020-01-05.json  2020-01-06.json  2020-01-07.json  2020-01-08.json  2020-01-09.json  2020-01-10.json  2020-01-11.json  2020-01-12.json  2020-01-13.json  2020-01-14.json  2020-01-15.json  2020-01-16.json  2020-01-17.json  2020-01-18.json  2020-01-19.json  2020-01-20.json  2020-01-21.json  2020-01-22.json  2020-01-23.json  2020-01-24.json  2020-01-25.json  2020-01-26.json  2020-01-27.json  2020-01-28.json  2020-01-29.json  2020-01-30.json  2020-01-31.json  2020-02-01.json  2020-02-02.json  2020-02-03.json  2020-02-04.json  2020-02-05.json  2020-02-06.json  2020-02-07.json  2020-02-08.json  2020-02-09.json  (+1968 more)
data/exchange_rates/EUR/: 2020-01-01.json  2020-01-02.json  2020-01-03.json  2020-01-04.json  2020-01-05.json  2020-01-06.json  2020-01-07.json  2020-01-08.json  2020-01-09.json  2020-01-10.json  2020-01-11.json  2020-01-12.json  2020-01-13.json  2020-01-14.json  2020-01-15.json  2020-01-16.json  2020-01-17.json  2020-01-18.json  2020-01-19.json  2020-01-20.json  2020-01-21.json  2020-01-22.json  2020-01-23.json  2020-01-24.json  2020-01-25.json  2020-01-26.json  2020-01-27.json  2020-01-28.json  (+1980 more)
public/: portfolio.html
public/css/: style.css  style_l.css  style_m.css  style_xl.css
public/js/: breakdown_charts.js  growth_charts.js  summary_fill_in.js
tests/pyp/: conftest.py
(+2077 files in other folders)
